Update LogInterceptor.java