@@ -46,10 +46,10 @@ public class LogInterceptor implements HandlerInterceptor {
     @Autowired
     private CacheClientService cacheClientService;
     private static final List<String> ALLOWED_URLS = Arrays.asList(
-            "/v1/account/**", "/v1/group/**", "/v1/department/**"
+            "/v1/account/**", "/v1/group/**", "/v1/department/**", "/v1/notification/**"
     );
-    private static final List<String> NOT_ALLOWED_URLS = Arrays.asList(
-            "/v1/account/request-key", "/v1/account/my-key"
+    private static final List<String> NOT_ALLOWED_URLS = List.of(
+            "/v1/account/my-key"
     );
     private final AntPathMatcher pathMatcher = new AntPathMatcher();
     private static final List<String> INTERNAL_REQUEST = List.of(
